argo-ecosystem/kubernetes/applications/traefik/eventsources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway

metadata:
    name: argo-eventsources-gateway
    namespace: argo-events

spec:
    gatewayClassName: argo-eventsources-gatewayclass

    listeners:
        - name: web
          protocol: HTTP
          port: 8000
