argo-ecosystem/kubernetes/applications/traefik/eventsources/demo-server-code-change.github-webhook.eventsource.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute

metadata:
    name: demo-server-code-change-github-webhook-eventsource-httproute
    namespace: argo-events

spec:
    parentRefs:
        - name: argo-eventsources-gateway
          sectionName: web
          namespace: argo-events

    hostnames:
        - demo-server-code-change.github-webhook.argo-eventsource.traefik.127.0.0.1.nip.io

    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /

          backendRefs:
              - name: code-change-github-webhook-eventsource-eventsource-svc
                port: 12000
                weight: 1
